Bug 1639071 - Don't dispatch key press when key down handler calls preventDefault. r=geckoview-reviewers,esawin

If key down event handler calls `event.preventDefault()`, web browser
shouldn't fire key press event. But GeckoView may fire key press
unfortunately if using software keyboard.

So we don't fire key press event when dispatching `eKeyDown` returns
`nsEventStatus_eConsumeNoDefault`.

Differential Revision: https://phabricator.services.mozilla.com/D75981